# soarm_ros2moveit

./: .gitignore  README.md
docs/: 00_basics.md  01_ros2_from_scratch.md  01_setup_guide.md  02_package_structure.md  03_troubleshooting.md  04_quick_commands.md  05_pick_place_project.md  FULL_GUIDE.md
examples/: gz_01_named_poses.py  gz_02_collision_scene.py  gz_03_pick_place_sim.py  gz_04_waypoints.py  gz_05_digital_twin.py  moveit_basic.py  moveit_pose_goal.py
hp60c_camera/: .gitignore  LICENSE  README.md  pyproject.toml
hp60c_camera/bridge/: CMakeLists.txt  build.sh  shm_bridge.cpp
hp60c_camera/docs/: architecture.md  troubleshooting.md
hp60c_camera/examples/: 01_open_camera.py  02_rgb_and_depth.py  03_rgb_depth_view.py  README.md
hp60c_camera/hp60c_camera/: __init__.py  reader.py
hp60c_camera/scripts/: start_bridge.sh
projects/week1_state_machine/: 01_hello_robot.py  02_state_machine.py  03_mission.py  README.md  robot_arm.py
projects/week2_behavior_tree/: 01_bt_basics.py  02_bt_pick_place.py  03_bt_mission.py  README.md
tools/: check_env.sh  generate_aruco_markers.py
ws/install/: local_setup.sh  setup.sh
ws/install/feetech_ros2_driver/include/feetech_ros2_driver/feetech_ros2_driver/: feetech_ros2_driver.hpp  version.hpp
ws/install/feetech_ros2_driver/lib/: libcommunication_protocol.so.0  libcommunication_protocol.so.0.1.0  libserial_port.so.0  libserial_port.so.0.1.0
ws/install/feetech_ros2_driver/lib/cmake/feetech_driver/: feetech_driver-config.cmake  feetech_driver-targets.cmake
ws/install/feetech_ros2_driver/share/feetech_ros2_driver/: feetech_ros2_control_plugin_description.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/feetech_ros2_driver/share/feetech_ros2_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  feetech_ros2_driverConfig-version.cmake  feetech_ros2_driverConfig.cmake  feetech_ros2_driverTargetsExport-noconfig.cmake  feetech_ros2_driverTargetsExport.cmake
ws/install/feetech_ros2_driver/share/feetech_ros2_driver/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
ws/install/so_arm100_description/share/so_arm100_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/so_arm100_description/share/so_arm100_description/cmake/: so_arm100_descriptionConfig-version.cmake  so_arm100_descriptionConfig.cmake
ws/install/so_arm100_description/share/so_arm100_description/control/: ros2_controllers.yaml  so_arm100.ros2_control.xacro
ws/install/so_arm100_description/share/so_arm100_description/environment/: ament_prefix_path.dsv  path.dsv  so_arm100_description.dsv
ws/install/so_arm100_description/share/so_arm100_description/launch/: controllers_bringup.launch.py
ws/install/so_arm100_description/share/so_arm100_description/meshes/: Base.stl  Base_Motor.stl  Fixed_Jaw.stl  Fixed_Jaw_Motor.stl  LICENSE  Lower_Arm.stl  Lower_Arm_Motor.stl  Moving_Jaw.stl  Rotation_Pitch.stl  Rotation_Pitch_Motor.stl  Upper_Arm.stl  Upper_Arm_Motor.stl  Wrist_Pitch_Roll.stl  (+1 more)
ws/install/so_arm100_moveit_config/share/so_arm100_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ws/install/so_arm101_description/share/so_arm101_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/so_arm101_moveit_config/share/so_arm101_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/so_arm_gz/share/so_arm_gz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/so_arm_utils/share/so_arm_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/soarm101_pick_place/lib/soarm101_pick_place/: aruco_detector_node.py  calibrate_hand_eye_node.py  camera_bridge_node.py  gz_05_digital_twin.py  pick_place_node.py  spawn_objects.py
ws/install/soarm101_pick_place/share/soarm101_pick_place/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/log/: latest_build
ws/src/projects/aruco_pick_place/: CMakeLists.txt
ws/src/projects/aruco_pick_place/config/: cam_to_robot.yaml  twin_world.sdf
ws/src/projects/aruco_pick_place/launch/: camera_aruco.launch.py  pick_place.launch.py
ws/src/projects/aruco_pick_place/soarm101_pick_place/: spawn_objects.py
ws/src/soarm101_pick_place/: package.xml
ws/src/soarm101_pick_place/config/: camera_intrinsics.yaml
ws/src/soarm101_pick_place/launch/: digital_twin.launch.py  gazebo_moveit.launch.py
ws/src/soarm101_pick_place/soarm101_pick_place/: aruco_detector_node.py  calibrate_hand_eye_node.py  camera_bridge_node.py  pick_place_node.py
(+100 files in other folders)
