[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hp60c-camera"
version = "0.1.0"
description = "HP60C/ASC60C depth camera shared-memory reader (Hiwonder/Angstrong)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
examples = ["opencv-python>=4.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hp60c_camera*"]
